# cmdparse

./: Cargo.toml  README.md  README.tpl
.github/: check-versions.sh
derive/: Cargo.toml  README.md
derive-tests/: Cargo.toml
derive-tests/src/: lib.rs  proc_macro.rs
derive/src/: context.rs  fields_gen.rs  gen.rs  lib.rs  variants.rs  variants_gen.rs
examples/: README.md  arithmetic.rs  smallvec.rs
src/: error.rs  lib.rs  testing.rs
src/parsers/: mod.rs  paths.rs  primitives.rs  sequences.rs
src/tokens/: lexing.rs  mod.rs  stream.rs
