[package]
name = "kmdparse"
version = "0.0.2"
authors = [
    "Vlad Poletaev <poletaev.vladislav@gmail.com>",
    "Sunip K. Mukherjee <sunipkmukherjee@gmail.com>",
]
description = "Parsing user's commands into arbitrary Rust types"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sunipkm/kmdparse"
documentation = "https://docs.rs/kmdparse/"
categories = ["parser-implementations", "no-std"]
readme = "README.md"

[features]
default = []
std = []

[dependencies]
kmdparse-derive = { path = "./derive", version = "=0.0.2" }

[dev-dependencies]
tempdir = "0.3"
rustyline = "9.1.0"
smallvec = "1.8"

[workspace]
members = ["derive", "derive-tests"]

[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
